src/components/Connect/Connect.module.css
.connect {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 40rem;
  min-height: 100vh;
  position: relative;
}

.otherConnect {
  position: relative;
  bottom: -14rem;
}

.scrollUpLottie {
  cursor: pointer;
  border-radius: 5rem;
}

.fieldSection {
  display: flex;
  flex-direction: column;
  flex: 1;
  min-width: 21rem;
  max-width: 50rem;
}

.fieldSection input,
.fieldSection textarea {
  font-size: 1.1rem;
  font-weight: 500;
  letter-spacing: 0.05rem;
  padding: 0.5rem;
  min-height: 2.5rem;
  border-radius: 0.5rem;
  background-color: rgba(255, 255, 255, 0.7);
  border: none;
  outline: none;
  cursor: context-menu;
  transition: all 0.3s ease-in-out;
}

.Select {
  display: grid;
  height: 2.5rem;
  transition: all 0.3s ease-in-out;
}

.Select * {
  align-items: center;
  align-self: center;
  margin: 0 !important;
  padding-top: 0 !important;
  padding-bottom: 0 !important;
}

.subCountry {
  display: flex;
  gap: 0.5rem;
  padding: 0.5rem !important;
}

.fieldSection input::placeholder,
.fieldSection textarea::placeholder {
  color: rgba(0, 0, 0, 0.65);
  font-weight: 500;
}

.fieldSection input:not(:placeholder-shown),
.fieldSection textarea:not(:placeholder-shown) {
  background-color: white;
}

.fieldSection input {
  height: 2.5rem;
}

.fieldSection input:focus,
.fieldSection input:hover,
.fieldSection textarea:focus,
.fieldSection textarea:hover {
  background-color: white;
}

.fieldSection input:focus,
.fieldSection textarea:focus {
  cursor: text;
}

.fieldSection label {
  font-weight: 500;
}

.optionalField,
.requiredField {
  display: inline-block;
  font-size: 0.7rem;
}

.optionalField {
  color: rgba(255, 255, 255, 0.75);
}

.requiredField {
  color: rgba(0, 204, 255, 0.75);
}

.submitButton {
  font-size: 1.5rem;
  font-weight: 600;
  padding: 0.3rem 1rem;
  width: 17rem;
  border-radius: 0.5rem;
  cursor: pointer;
  background-color: rgba(0, 204, 255, 0.7);
  transition: all 0.3s;
  transition: width 0.7s ease-in-out;
  pointer-events: none;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.submitButton.send {
  width: 7rem;
  pointer-events: auto;
}

.submitButton:hover {
  background-color: rgb(0, 204, 255);
}

.mailLottie {
  display: flex;
  align-items: center;
}

.fieldSection h2 {
  display: inline;
  font-size: 2.5rem;
  font-weight: 600;
  color: rgb(0, 204, 255);
  background: linear-gradient(
    90deg,
    rgb(0, 204, 255) 0%,
    rgb(0, 204, 255) 35%,
    white 50%,
    rgb(0, 204, 255) 65%,
    rgb(0, 204, 255) 100%
  );
  background-clip: text;
  background-size: 200% 200%;
  color: transparent;
  animation: gradient-animation 2.5s linear infinite reverse;
}

@keyframes gradient-animation {
  0% {
    background-position: 0% 50%;
  }
  100% {
    background-position: 200% 100%;
  }
}

.allFields {
  display: grid;
  grid-template: repeat(2, 1fr) 3.5fr 1fr / repeat(2, minmax(20rem, 30rem));
  gap: 1rem;
  padding: 0 1rem;
}

.nameField {
  grid-column: 1 / 2;
}

.countryField {
  grid-column: 2 / span 1;
}

.noteField {
  grid-column: 1 / -1;
}

.nameField:hover .optionalField,
.field:hover .requiredField {
  animation: bounceField 1s infinite;
}

.animateFieldOption {
  animation: bounceField 1s infinite;
}

@keyframes bounceField {
  0% {
    transform: translateY(0);
    animation-timing-function: ease-out;
  }
  50% {
    transform: translateY(-8px);
    animation-timing-function: ease-in;
  }
  100% {
    transform: translateY(0);
    animation-timing-function: ease-out;
  }
}

.allFields > div {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
}

.feedback {
  font-size: 0.7rem;
}

.motiveField {
  position: relative;
}

.motiveField input:hover ~ .chevronCover,
.motiveField input:focus ~ .chevronCover,
.fieldSection input:not(:placeholder-shown) ~ .chevronCover {
  background-color: white;
}

.chevronCover {
  display: flex;
  justify-content: center;
  position: absolute;
  right: 0;
  bottom: 0.3rem;
  width: 2.2rem;
  height: 2.2rem;
  z-index: 5;
  background-color: rgb(179, 180, 186);
  border-radius: 0.5rem;
  transition: background-color 0.3s ease-in-out;
  pointer-events: none;
}

.chevronCover svg {
  width: 0.85rem;
  fill: rgb(0, 6, 26);
}

.checkIcon {
  width: 1rem;
  fill: rgb(0, 204, 255);
  position: relative;
  right: -50%;
  top: 0.1rem;
  transform: scale(0);
  filter: blur(2rem);
  animation: correct 0.5s ease-in-out forwards;
}

@keyframes correct {
  to {
    right: 0;
    transform: scale(1);
    filter: blur(0);
  }
}

@media (max-width: 1600px) {
  .connect {
    gap: 20rem;
  }
}

@media (max-width: 1300px) {
  .connect {
    gap: 10rem;
  }
}

@media (max-width: 1100px) {
  .connect {
    flex-direction: column;
    gap: 5rem;
  }

  .otherConnect {
    align-self: flex-end;
    position: relative;
    bottom: 2rem;
    right: 1.5rem;
  }
}

@media (max-width: 700px) {
  .fieldSection h2 {
    font-size: 2rem;
  }

  .allFields {
    justify-content: center;
    grid-template: repeat(4, 1fr) 3.5fr 1fr / minmax(15rem, 25rem);
    gap: 1rem;
  }

  .nameField {
    grid-column: 1 / -1;
  }

  .countryField {
    grid-column: 1 / -1;
  }

  .noteField {
    grid-column: 1 / -1;
  }

  .mailLottie {
    padding: 5vmin;
  }
}

